--- a/khan-blog.html
+++ b/khan-blog.html
@@ -56,6 +56,15 @@
         <h3 class="h3" id="post3">Third post</h3>
         <h6 class="h6">Posted on Sep. 26th, 2021</h6>
         <p id="p3">On the week leading up to the 26th, I learned more HTML. During this lesson, I learned how to add links (internal <em>and</em> external), as well as how to add tables to display data. I also learned how to add comments that only I can see, because the browser won't display it on the webpage. </p>
+
+        <h3 class="h3" id="post4">Fourth post</h3>
+        <h6 class="h6">Posted on Oct 17th, 2021</h6>
+        <p id="p3">On the week leading up to the 17th, I learned how to change fonts, using CSS. I learned basic commands, like how to change, the font itself, the size, as well as what I learned earlier, like changing font color, and changing it into bold or italics.</p>
         
+        <h3 class="h3" id="post5">Fifth post</h3>
+        <h6 class="h6">Posted on Oct. 24th, 2021</h6>
+        <p id="p3"> </p>
+
     </body>
+ 
 </html>
